--- a/index.html
+++ b/index.html
@@ -1,56 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- This title will display at the toop of your app window -->
+    <title>Feldspar</title>
+  </head>
 
-<head>
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="trellolike.css">
-  <script>
-    window.$ = window.jQuery = require('jquery');
-    require('./renderer.js'); // You can also require other files to run in this process
-  </script>
-  <meta charset="UTF-8">
-  <title>Trollo</title>
-</head>
+  <body>
+    <!-- This div is where we will insert our UI -->
+    <div id="container"></div>
+  </body>
 
-<body>
+  <!-- finally we run ports.js to start the elm app -->
+  <script type="text/javascript" src="ports.js"></script>
 
-  <div id="main_board">
-    <section class="list">
-      <header>To Do</header>
-      <article class="card">
-        <header>Drag and Drop CSS</header>
-        <div class="detail">1/2</div>
-      </article>
-      <article class="card">
-        <header>Maybe something else ?</header>
-        <div class="detail">1/2</div>
-      </article>
-    </section>
-    <section class="list">
-      <header>Doing</header>
-      <article class="card">
-        <header>Drag and Drop JS</header>
-        <div class="detail">1/2</div>
-      </article>
-    </section>
-    <section class="list">
-      <header>Done</header>
-      <article class="card">
-        <header>Global HTML</header>
-        <div class="detail">1/2</div>
-      </article>
-      <article class="card">
-        <header>Global CSS</header>
-        <div class="detail">1/2</div>
-      </article>
-    </section>
-  </div>
-  <div>
-    <button id="test">TEST</button>
-  </div>
-  <script>
-
-  </script>
-</body>
 
 </html>
