--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         $(`<article class="card" />`).text(arrayVariable2[i*(j+1)+j]).appendTo(`#list${i}`);
         $(`<article class="detail" />`).text("1/2").appendTo(`#list${i}`);
       }
-      $(`<Button class="addList" id="${i}" />`).text("Add").appendTo(`#list${i}`);
+      $(`<Button class="addCard" id="${i}" />`).text("Add").appendTo(`#list${i}`);
     }
   </script>
 </body>
