--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div id="main_board">
   </div>
+  <button class="addList">Add new list</button>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script>
     var arrayVariable = ['To do','Doing','Done'];
