Trollo logo the best logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </script>
   <meta charset="UTF-8">
   <title>Trollo</title>
+  <img src="logo.jpg" alt="Trollo" height="60" width="150">
 </head>
 
 <body>
