update view to match trollo style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head>  
+    <link rel="stylesheet" href="trellolike.css"/>  
     <!-- This title will display at the toop of your app window -->
     <title>Feldspar</title>
   </head>
@@ -8,6 +9,7 @@
   <body>
     <!-- This div is where we will insert our UI -->
     <div id="container"></div>
+    
   </body>
 
   <!-- finally we run ports.js to start the elm app -->
