--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>  
-    <link rel="stylesheet" href="trellolike.css"/>  
-    <!-- This title will display at the toop of your app window -->
-    <title>Feldspar</title>
-  </head>
 
-  <body>
-    <!-- This div is where we will insert our UI -->
-    <div id="container"></div>
-    
-  </body>
+<head>
 
-  <!-- finally we run ports.js to start the elm app -->
-  <script type="text/javascript" src="ports.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500|Roboto+Mono|Roboto+Condensed:400,700&subset=latin,latin-ext'
+    rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-red.min.css" />
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="trellolike.css" />
+  <!-- This title will display at the toop of your app window -->
+  <title>Feldspar</title>
+</head>
+
+<body>
+  <!-- This div is where we will insert our UI -->
+  <div id="container"></div>
+
+</body>
+
+<!-- finally we run ports.js to start the elm app -->
+<script type="text/javascript" src="ports.js"></script>
 
 
 </html>
