--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Feldspar</title>
 </head>
 
-<body>
+<body style="background-Color:#E3EBEE">
   <!-- This div is where we will insert our UI -->
   <div id="container"></div>
 
